--- a/src/app/components/product-category-menu/product-category-menu.component.html
+++ b/src/app/components/product-category-menu/product-category-menu.component.html
@@ -2,23 +2,23 @@
     <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
 
-            <!-- <li *ngFor="let category of productCategories">
+            <!-- <li *ngFor="let tempCategory of productCategories">
 
-                <a routerLink="/category/{{category.id}}" routerLinkActive="active-link">
-                    {{category.categoryName }}
+                <a routerLink="/category/{{tempCategory.id}}" routerLinkActive="active-link">
+                    {{tempCategory.categoryName }}
                 </a>
 
             </li> -->
 
             <li>
-                <a routerLink="/category/1 " routerLinkActive="active-link">Plants</a>
+                <a  class="category-name" routerLink="/category/1 " routerLinkActive="active-link">Plants</a>
             </li>
             <li>
-                <a routerLink="/category/2 " routerLinkActive="active-link">Pots</a>
+                <a class="category-name" routerLink="/category/2 " routerLinkActive="active-link">Pots</a>
             </li>
 
             <li>
-                <a routerLink="/category/3 " routerLinkActive="active-link">Accessory</a>
+                <a class="category-name" routerLink="/category/3 " routerLinkActive="active-link">Accessory</a>
             </li>
         </ul>
     </nav>
