--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,12 +1,27 @@
-<div class="detail-section">
+<div class="detail-section bg-light">
     <div class="container-fluid">
-       <img src="{{product.imageUrl}}" alt="" class="detail-img">
-       <h3>{{product.name}}</h3>
-       <div class="price">{{product.unitPrice | currency: 'USD'}}</div>
-       <a class="primary-btn">Add to cart</a>
-       <hr>
-       <h4>Description</h4>
-       <p>{{product.description}}</p>
-       <a routerLink="/products" class="mt-5"> Back to Product List</a>
+       
+       
+            <img src="{{product.imageUrl}}" alt="" class="detail-img mt-5">
+
+       
+      
+            <div class="detail-body">
+                <h3>{{product.name}}</h3>
+                <div class="price">{{product.unitPrice | currency: 'USD'}}</div>
+                <button class="primary-btn"  (click)="addToCart()">Add to cart</button>
+                <hr>
+                <h4>Description</h4>
+                <p>{{product.description}}</p>
+            </div>
+            <a routerLink="/products" class="mt-5"> Back to Product List</a>
+
+
+
+   
+
+        
+
+        
     </div>
 </div>
