--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -11,7 +11,7 @@
                             <h1> {{product.name}}</h1>
                         </a>
                         <div class="price"> {{product.unitPrice}}</div>
-                        <a class="primary-btn">Add to Cart</a>
+                        <button (click)="addToCart(product)" class="btn btn-primary btn-small">Add to Cart</button>
                     </div>
                 </div>
 
@@ -26,23 +26,25 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="row">
-                            <div class="col-md-9" style="padding-left: 30%">
+                            <!-- <div class="col-md-9" style="padding-left: 30%;">
                                 <ngb-pagination [(page)]="pageNumber" 
                                                 [pageSize]="pageSize"
                                                 [collectionSize]="totalElements" 
-                                                [maxSize]="5"
-                                                [boundaryLinks]="true"
-                                                (pageChange)="listProducts">
+                                                [maxSize]="3"
+                                               
+                                                (pageChange)="listProducts"
+                                                >
                                     
                                 </ngb-pagination>
-                            </div>
-                            
+                            </div> -->
+  
                         </div>
                     </div>
-                    <div class="col-md-6">
+<!--                     
+                    <div class="col-md-3"> -->
                         
                         <!-- pagination where user can select the number of products to display-->
-                        <div class="col-md-4 mt-2" style="text-align: right;">
+                        <!-- <div class="col-md-4 mt-2" style="text-align: right;">
                             <span class="mr-2">Page Size</span>
                             <select #pageSelect (change)="updatePageSize(pageSelect.value)">
                                 <option>2</option>
@@ -51,8 +53,9 @@
                                 <option >20</option>
                                 <option >50</option>
                             </select>
-                        </div>
-                    </div>
+                        </div> -->
+                    <!-- </div> -->
+                    
                 </div>
             <!-- </div> -->
             <!-- end footer -->
